Add ErrorOr library to use custom error class for different errors

--- a/Dinner.Api/Dinner.Api.csproj
+++ b/Dinner.Api/Dinner.Api.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Dinner.Infrastructure\Dinner.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common" />
+  </ItemGroup>
+
 </Project>
