--- a/Dinner.Api/Dinner.Api.csproj
+++ b/Dinner.Api/Dinner.Api.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -14,10 +16,6 @@
     <ProjectReference Include="..\Dinner.Contracts\Dinner.Contracts.csproj" />
     <ProjectReference Include="..\Dinner.Application\Dinner.Application.csproj" />
     <ProjectReference Include="..\Dinner.Infrastructure\Dinner.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common" />
   </ItemGroup>
 
 </Project>
